--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "style-loader": "^4.0.0",
     "swiper": "^9.4.1",
     "video-react": "^0.16.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "homepage": "https://MRMALIK2512.github.io/ED-techplatform"
   },
   "repository": {
     "type": "git",
@@ -46,6 +47,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject",
     "server": "cd Server && npm run dev",
     "dev": "concurrently -n \"client,server\" -c \"bgBlue,bgYellow\" \"npm start\" \"npm run server\""
@@ -69,7 +72,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.1.1",
     "tailwindcss": "^3.2.7"
   }
 }
