--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "video-react": "^0.16.0",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://MRMALIK2512.github.io/ED-techplatform/",
+  "homepage": "https://MRMALIK2512.github.io/ED-techplatform",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/thepranaygupta/react-tailwind-css-starter-pack.git"
